k8s/deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploiement-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: dddiallo/site
          ports:
            - containerPort: 80
