k8s/clustorip.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8c4-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
